methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  while (estSurBiscuit()==false){
    if (getCouleurSol==Color.green){
    baisseBrosse()
    leveBrosse()
    recule()
    avance()
    avance()
    if 
    }else{
      recule()
      gauche()
      avance()
    }
  }
}
    
    // Write your code here
